--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.18", features = ["derive"] }
+crossterm = "0.27.0"
 dialoguer = "0.11.0"
 indicatif = "0.17.7"
+ratatui = "0.25.0"
 serde = "1.0.196"
